# playtak-tei

./: Cargo.toml  README.md
src/: game.rs  main.rs  option.rs  seek.rs
