[package]
name = "playtak-tei"
version = "1.0.0"
authors = ["Chris Foster <cdbfoster@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"


[dependencies]
async-std = { version = "1.12", features = ["unstable"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"